# scamwatchxlm-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
contracts/common/: Cargo.toml
contracts/common/src/: governance.rs  lib.rs  pagination.rs  reputation.rs  types.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
scripts/: build.sh  deploy.sh  setup.sh
